// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`active ticket form renders the expected components 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  color: #2f3941;
  height: 100%;
  width: 100%;
  max-width: 100vw;
  position: relative;
  overflow: hidden;
  background-color: #fff;
  box-shadow: 0 0 0.42857142857142855rem 0 rgba(0,0,0,0.2);
  border-radius: 0.5714285714285714rem;
}

.c1 {
  padding: 0.5714285714285714rem 1rem;
  background: #1F73B7 !important;
  color: #FFFFFF !important;
}

.c4 {
  font-weight: 700;
  text-align: center;
  -webkit-letter-spacing: 0.02142857142857143rem;
  -moz-letter-spacing: 0.02142857142857143rem;
  -ms-letter-spacing: 0.02142857142857143rem;
  letter-spacing: 0.02142857142857143rem;
  line-height: 1.5;
  font-size: 1.0714285714285714rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-bottom: 2px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 2rem;
}

.c2:not(:first-child) {
  margin-top: 0.2857142857142857rem;
}

.c2 .c3:first-child {
  margin-left: 4rem;
}

.c2 .c3:nth-child(2) {
  margin-left: 2rem;
}

.c2 .c3:last-child {
  margin-right: 4rem;
}

.c2 .c3:nth-last-child(2) {
  margin-right: 2rem;
}

.c2 .c5 {
  width: 2rem !important;
  height: 2rem !important;
}

.c6 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c6 svg {
  width: 1rem !important;
  height: 1rem !important;
}

.c6 svg,
.c6 path {
  fill: #FFFFFF !important;
  color: #FFFFFF !important;
}

.c6:focus {
  outline: none !important;
  box-shadow: 0 0 0 0.21428571428571427rem rgba(255,255,255,0.4) !important;
}

.c6:hover {
  background: #227EC9 !important;
}

.c7 {
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
  padding-top: 1.0714285714285714rem;
  padding-left: 0.7142857142857143rem;
  padding-right: 1.0714285714285714rem;
  margin-left: 0.7142857142857143rem;
  margin-right: 0.35714285714285715rem;
  overflow-y: auto;
  overflow-x: hidden;
  height: 100%;
}

.c7::-webkit-scrollbar-track {
  margin: 1.0714285714285714 0;
}

.c7::-webkit-scrollbar {
  box-shadow: none;
  width: 0.42857142857142855rem;
}

.c7::-webkit-scrollbar-thumb {
  background: #d8dcde;
  border-radius: 0.21428571428571427rem;
}

.c8 {
  padding: 1.0714285714285714rem 1.4285714285714286rem;
  border-top: 0.07857142857142858rem solid #e9ebed;
  box-shadow: 0 -0.07142857142857142rem 0.8571428571428571rem rgba(0,0,0,0.08);
}

.c10 {
  position: relative;
  display: inline-block;
}

.c10 svg {
  min-width: 3.5714285714285716rem;
  width: 3.5714285714285716rem;
  height: 0.7142857142857143rem;
}

.c10 svg:hover path,
.c10 svg:active path,
.c10 svg:focus path {
  fill: #68737d;
}

.c10 svg path {
  fill: #87929d;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

<div>
  <div
    style="display: block;"
  >
    <div>
      <form
        class="form "
        novalidate=""
      >
        <div
          class="c0"
        >
          <div
            class="c1"
            data-testid="widget-header-view"
          >
            <div
              class="c2"
            >
              <h1
                class="c3 c4"
                data-testid="widget-title"
              >
                message
              </h1>
              <button
                aria-label="Minimize widget"
                class="c5 index__c-btn--icon___1Yl4x c6 index__c-btn___3y2Qe index__c-btn--basic___38OO7 index__c-btn--muted___ze6U0 index__c-btn--sm___3Kuhv "
                data-garden-container-id="containers.keyboardfocus"
                data-garden-container-version="0.4.4"
                data-garden-id="buttons.icon_button"
                data-garden-version="7.1.10"
                tabindex="0"
                type="button"
              >
                <svg
                  class="index__c-btn__icon___3V0Rl"
                  data-garden-id="buttons.icon"
                  data-garden-version="7.1.10"
                  data-testid="Icon--dash"
                  realfilename="dash-fill.svg"
                />
              </button>
            </div>
          </div>
          <div
            class="c7"
            data-testid="scroll-container-content"
          >
            <div
              class="formWrapper"
            >
              <h2
                class="ticketFormTitle "
              >
                Ticket Forms
              </h2>
              <div
                class="text__c-txt___Uzv-G range__c-range___1aYaS "
              >
                <label
                  class="text__c-txt__label___3wMPZ "
                  data-garden-container-id="containers.field"
                  data-garden-container-version="1.3.3"
                  data-garden-id="forms.text_label"
                  data-garden-version="7.1.10"
                  for="10val-field_1.3.3--input"
                  id="10val-field_1.3.3--label"
                >
                  <strong>
                    Your name
                  </strong>
                   (optional)
                </label>
                <input
                  aria-describedby="10val-field_1.3.3--hint"
                  aria-invalid="false"
                  aria-labelledby="10val-field_1.3.3--label"
                  class="text__c-txt__input___38pRd "
                  data-garden-id="forms.input"
                  data-garden-version="7.1.10"
                  data-testid="name-field"
                  id="10val-field_1.3.3--input"
                  name="name"
                  value=""
                />
              </div>
              <div
                class="text__c-txt___Uzv-G range__c-range___1aYaS "
              >
                <label
                  class="text__c-txt__label___3wMPZ "
                  data-garden-container-id="containers.field"
                  data-garden-container-version="1.3.3"
                  data-garden-id="forms.text_label"
                  data-garden-version="7.1.10"
                  for="11val-field_1.3.3--input"
                  id="11val-field_1.3.3--label"
                >
                  <strong>
                    Email address
                  </strong>
                </label>
                <input
                  aria-describedby="11val-field_1.3.3--hint"
                  aria-invalid="false"
                  aria-labelledby="11val-field_1.3.3--label"
                  class="text__c-txt__input___38pRd "
                  data-garden-id="forms.input"
                  data-garden-version="7.1.10"
                  data-testid="email-field"
                  id="11val-field_1.3.3--input"
                  name="email"
                  pattern="[a-zA-Z0-9!#$%&'*+/=?^_\`{|}~\\\\-\`']+(?:\\\\.[a-zA-Z0-9!#$%&'*+/=?^_\`{|}~\\\\-\`']+)*@(?:[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?\\\\.)+[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?"
                  required=""
                  value=""
                />
              </div>
              <div
                class="text__c-txt___Uzv-G range__c-range___1aYaS "
              >
                <label
                  class="text__c-txt__label___3wMPZ "
                  data-garden-container-id="containers.field"
                  data-garden-container-version="1.3.3"
                  data-garden-id="forms.text_label"
                  data-garden-version="7.1.10"
                  data-keyid="1"
                  for="12val-field_1.3.3--input"
                  id="12val-field_1.3.3--label"
                >
                  <strong>
                    Description
                  </strong>
                   (optional)
                </label>
                <input
                  aria-describedby="12val-field_1.3.3--hint"
                  aria-invalid="false"
                  aria-labelledby="12val-field_1.3.3--label"
                  class="text__c-txt__input___38pRd "
                  data-garden-id="forms.input"
                  data-garden-version="7.1.10"
                  id="12val-field_1.3.3--input"
                  name="1"
                  value=""
                />
              </div>
              <div
                class="text__c-txt___Uzv-G range__c-range___1aYaS "
              >
                <label
                  class="text__c-txt__label___3wMPZ "
                  data-garden-container-id="containers.field"
                  data-garden-container-version="1.3.3"
                  data-garden-id="forms.text_label"
                  data-garden-version="7.1.10"
                  data-keyid="2"
                  for="13val-field_1.3.3--input"
                  id="13val-field_1.3.3--label"
                >
                  <strong>
                    Subject
                  </strong>
                   (optional)
                </label>
                <input
                  aria-describedby="13val-field_1.3.3--hint"
                  aria-invalid="false"
                  aria-labelledby="13val-field_1.3.3--label"
                  class="text__c-txt__input___38pRd "
                  data-garden-id="forms.input"
                  data-garden-version="7.1.10"
                  id="13val-field_1.3.3--input"
                  name="2"
                  value=""
                />
              </div>
              <div
                class="text__c-txt___Uzv-G range__c-range___1aYaS "
              >
                <label
                  class="text__c-txt__label___3wMPZ "
                  data-garden-container-id="containers.field"
                  data-garden-container-version="1.3.3"
                  data-garden-id="forms.text_label"
                  data-garden-version="7.1.10"
                  data-keyid="5"
                  for="14val-field_1.3.3--input"
                  id="14val-field_1.3.3--label"
                >
                  <strong>
                    Favorite Pizza
                  </strong>
                </label>
                <input
                  aria-describedby="14val-field_1.3.3--hint"
                  aria-invalid="false"
                  aria-labelledby="14val-field_1.3.3--label"
                  class="text__c-txt__input___38pRd "
                  data-garden-id="forms.input"
                  data-garden-version="7.1.10"
                  id="14val-field_1.3.3--input"
                  name="5"
                  required=""
                  value=""
                />
              </div>
              <span />
            </div>
          </div>
          <footer
            class="c8"
          >
            <div
              class="c9"
            >
              <a
                class="c10"
                data-testid="Icon--zendesk"
                href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
                tabindex="-1"
                target="_blank"
              >
                <svg
                  realfilename="widget-icon_zendesk.svg"
                  title="zendesk"
                />
              </a>
              <button
                class="button index__c-btn___3y2Qe index__c-btn--primary___1YOfW "
                data-garden-container-id="containers.keyboardfocus"
                data-garden-container-version="0.4.4"
                data-garden-id="buttons.button"
                data-garden-version="7.1.10"
                data-testid="button-ok"
                tabindex="0"
                type="submit"
              >
                Send
              </button>
            </div>
          </footer>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`active ticket form renders the expected components in mobile form 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -52,5 +52,5 @@
              >
                <h2
-                 class="ticketFormTitle "
+                 class="ticketFormTitle ticketFormTitleMobile"
                >
                  Ticket Forms
@@ -65,6 +65,6 @@
                    data-garden-id="forms.text_label"
                    data-garden-version="7.1.10"
-                   for="20val-field_1.3.3--input"
-                   id="20val-field_1.3.3--label"
+                   for="15val-field_1.3.3--input"
+                   id="15val-field_1.3.3--label"
                  >
                    <strong>
@@ -74,12 +74,12 @@
                  </label>
                  <input
-                   aria-describedby="20val-field_1.3.3--hint"
+                   aria-describedby="15val-field_1.3.3--hint"
                    aria-invalid="false"
-                   aria-labelledby="20val-field_1.3.3--label"
+                   aria-labelledby="15val-field_1.3.3--label"
                    class="StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd icTNBi"
                    data-garden-id="forms.input"
                    data-garden-version="7.1.10"
                    data-testid="name-field"
-                   id="20val-field_1.3.3--input"
+                   id="15val-field_1.3.3--input"
                    name="name"
                    value=""
@@ -95,6 +95,6 @@
                    data-garden-id="forms.text_label"
                    data-garden-version="7.1.10"
-                   for="21val-field_1.3.3--input"
-                   id="21val-field_1.3.3--label"
+                   for="16val-field_1.3.3--input"
+                   id="16val-field_1.3.3--label"
                  >
                    <strong>
@@ -103,12 +103,12 @@
                  </label>
                  <input
-                   aria-describedby="21val-field_1.3.3--hint"
+                   aria-describedby="16val-field_1.3.3--hint"
                    aria-invalid="false"
-                   aria-labelledby="21val-field_1.3.3--label"
+                   aria-labelledby="16val-field_1.3.3--label"
                    class="StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd icTNBi"
                    data-garden-id="forms.input"
                    data-garden-version="7.1.10"
                    data-testid="email-field"
-                   id="21val-field_1.3.3--input"
+                   id="16val-field_1.3.3--input"
                    name="email"
                    pattern="[a-zA-Z0-9!#$%&'*+/=?^_\`{|}~\\\\-\`']+(?:\\\\.[a-zA-Z0-9!#$%&'*+/=?^_\`{|}~\\\\-\`']+)*@(?:[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?\\\\.)+[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?"
@@ -127,6 +127,6 @@
                    data-garden-version="7.1.10"
                    data-keyid="1"
-                   for="22val-field_1.3.3--input"
-                   id="22val-field_1.3.3--label"
+                   for="17val-field_1.3.3--input"
+                   id="17val-field_1.3.3--label"
                  >
                    <strong>
@@ -136,11 +136,11 @@
                  </label>
                  <input
-                   aria-describedby="22val-field_1.3.3--hint"
+                   aria-describedby="17val-field_1.3.3--hint"
                    aria-invalid="false"
-                   aria-labelledby="22val-field_1.3.3--label"
+                   aria-labelledby="17val-field_1.3.3--label"
                    class="StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd icTNBi"
                    data-garden-id="forms.input"
                    data-garden-version="7.1.10"
-                   id="22val-field_1.3.3--input"
+                   id="17val-field_1.3.3--input"
                    name="1"
                    value=""
@@ -157,6 +157,6 @@
                    data-garden-version="7.1.10"
                    data-keyid="2"
-                   for="23val-field_1.3.3--input"
-                   id="23val-field_1.3.3--label"
+                   for="18val-field_1.3.3--input"
+                   id="18val-field_1.3.3--label"
                  >
                    <strong>
@@ -166,11 +166,11 @@
                  </label>
                  <input
-                   aria-describedby="23val-field_1.3.3--hint"
+                   aria-describedby="18val-field_1.3.3--hint"
                    aria-invalid="false"
-                   aria-labelledby="23val-field_1.3.3--label"
+                   aria-labelledby="18val-field_1.3.3--label"
                    class="StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd icTNBi"
                    data-garden-id="forms.input"
                    data-garden-version="7.1.10"
-                   id="23val-field_1.3.3--input"
+                   id="18val-field_1.3.3--input"
                    name="2"
                    value=""
@@ -187,6 +187,6 @@
                    data-garden-version="7.1.10"
                    data-keyid="5"
-                   for="24val-field_1.3.3--input"
-                   id="24val-field_1.3.3--label"
+                   for="19val-field_1.3.3--input"
+                   id="19val-field_1.3.3--label"
                  >
                    <strong>
@@ -195,11 +195,11 @@
                  </label>
                  <input
-                   aria-describedby="24val-field_1.3.3--hint"
+                   aria-describedby="19val-field_1.3.3--hint"
                    aria-invalid="false"
-                   aria-labelledby="24val-field_1.3.3--label"
+                   aria-labelledby="19val-field_1.3.3--label"
                    class="StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd icTNBi"
                    data-garden-id="forms.input"
                    data-garden-version="7.1.10"
-                   id="24val-field_1.3.3--input"
+                   id="19val-field_1.3.3--input"
                    name="5"
                    required=""
`;

exports[`renders the expected components 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  color: #2f3941;
  height: 100%;
  width: 100%;
  max-width: 100vw;
  position: relative;
  overflow: hidden;
  background-color: #fff;
  box-shadow: 0 0 0.42857142857142855rem 0 rgba(0,0,0,0.2);
  border-radius: 0.5714285714285714rem;
}

.c1 {
  padding: 0.5714285714285714rem 1rem;
  background: #1F73B7 !important;
  color: #FFFFFF !important;
}

.c4 {
  font-weight: 700;
  text-align: center;
  -webkit-letter-spacing: 0.02142857142857143rem;
  -moz-letter-spacing: 0.02142857142857143rem;
  -ms-letter-spacing: 0.02142857142857143rem;
  letter-spacing: 0.02142857142857143rem;
  line-height: 1.5;
  font-size: 1.0714285714285714rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-bottom: 2px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 2rem;
}

.c2:not(:first-child) {
  margin-top: 0.2857142857142857rem;
}

.c2 .c3:first-child {
  margin-left: 4rem;
}

.c2 .c3:nth-child(2) {
  margin-left: 2rem;
}

.c2 .c3:last-child {
  margin-right: 4rem;
}

.c2 .c3:nth-last-child(2) {
  margin-right: 2rem;
}

.c2 .c5 {
  width: 2rem !important;
  height: 2rem !important;
}

.c6 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c6 svg {
  width: 1rem !important;
  height: 1rem !important;
}

.c6 svg,
.c6 path {
  fill: #FFFFFF !important;
  color: #FFFFFF !important;
}

.c6:focus {
  outline: none !important;
  box-shadow: 0 0 0 0.21428571428571427rem rgba(255,255,255,0.4) !important;
}

.c6:hover {
  background: #227EC9 !important;
}

.c7 {
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
  padding-top: 1.0714285714285714rem;
  padding-left: 0.7142857142857143rem;
  padding-right: 1.0714285714285714rem;
  margin-left: 0.7142857142857143rem;
  margin-right: 0.35714285714285715rem;
  overflow-y: auto;
  overflow-x: hidden;
  height: 100%;
}

.c7::-webkit-scrollbar-track {
  margin: 1.0714285714285714 0;
}

.c7::-webkit-scrollbar {
  box-shadow: none;
  width: 0.42857142857142855rem;
}

.c7::-webkit-scrollbar-thumb {
  background: #d8dcde;
  border-radius: 0.21428571428571427rem;
}

.c8 {
  padding: 1.0714285714285714rem 1.4285714285714286rem;
  border-top: 0.07857142857142858rem solid #e9ebed;
  box-shadow: 0 -0.07142857142857142rem 0.8571428571428571rem rgba(0,0,0,0.08);
}

.c10 {
  position: relative;
  display: inline-block;
}

.c10 svg {
  min-width: 3.5714285714285716rem;
  width: 3.5714285714285716rem;
  height: 0.7142857142857143rem;
}

.c10 svg:hover path,
.c10 svg:active path,
.c10 svg:focus path {
  fill: #68737d;
}

.c10 svg path {
  fill: #87929d;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

<div>
  <div
    style="display: block;"
  >
    <div>
      <form
        class="form "
        novalidate=""
      >
        <div
          class="c0"
        >
          <div
            class="c1"
            data-testid="widget-header-view"
          >
            <div
              class="c2"
            >
              <h1
                class="c3 c4"
                data-testid="widget-title"
              >
                message
              </h1>
              <button
                aria-label="Minimize widget"
                class="c5 index__c-btn--icon___1Yl4x c6 index__c-btn___3y2Qe index__c-btn--basic___38OO7 index__c-btn--muted___ze6U0 index__c-btn--sm___3Kuhv "
                data-garden-container-id="containers.keyboardfocus"
                data-garden-container-version="0.4.4"
                data-garden-id="buttons.icon_button"
                data-garden-version="7.1.10"
                tabindex="0"
                type="button"
              >
                <svg
                  class="index__c-btn__icon___3V0Rl"
                  data-garden-id="buttons.icon"
                  data-garden-version="7.1.10"
                  data-testid="Icon--dash"
                  realfilename="dash-fill.svg"
                />
              </button>
            </div>
          </div>
          <div
            class="c7"
            data-testid="scroll-container-content"
          >
            <div
              class="formWrapper"
            >
              <div
                class="text__c-txt___Uzv-G range__c-range___1aYaS "
              >
                <label
                  class="text__c-txt__label___3wMPZ "
                  data-garden-container-id="containers.field"
                  data-garden-container-version="1.3.3"
                  data-garden-id="forms.text_label"
                  data-garden-version="7.1.10"
                  for="1val-field_1.3.3--input"
                  id="1val-field_1.3.3--label"
                >
                  <strong>
                    Your name
                  </strong>
                   (optional)
                </label>
                <input
                  aria-describedby="1val-field_1.3.3--hint"
                  aria-invalid="false"
                  aria-labelledby="1val-field_1.3.3--label"
                  class="text__c-txt__input___38pRd "
                  data-garden-id="forms.input"
                  data-garden-version="7.1.10"
                  data-testid="name-field"
                  id="1val-field_1.3.3--input"
                  name="name"
                  value=""
                />
              </div>
              <div
                class="text__c-txt___Uzv-G range__c-range___1aYaS "
              >
                <label
                  class="text__c-txt__label___3wMPZ "
                  data-garden-container-id="containers.field"
                  data-garden-container-version="1.3.3"
                  data-garden-id="forms.text_label"
                  data-garden-version="7.1.10"
                  for="2val-field_1.3.3--input"
                  id="2val-field_1.3.3--label"
                >
                  <strong>
                    Email address
                  </strong>
                </label>
                <input
                  aria-describedby="2val-field_1.3.3--hint"
                  aria-invalid="false"
                  aria-labelledby="2val-field_1.3.3--label"
                  class="text__c-txt__input___38pRd "
                  data-garden-id="forms.input"
                  data-garden-version="7.1.10"
                  data-testid="email-field"
                  id="2val-field_1.3.3--input"
                  name="email"
                  pattern="[a-zA-Z0-9!#$%&'*+/=?^_\`{|}~\\\\-\`']+(?:\\\\.[a-zA-Z0-9!#$%&'*+/=?^_\`{|}~\\\\-\`']+)*@(?:[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?\\\\.)+[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?"
                  required=""
                  value=""
                />
              </div>
              <div
                class="text__c-txt___Uzv-G range__c-range___1aYaS "
              >
                <label
                  class="text__c-txt__label___3wMPZ "
                  data-garden-container-id="containers.field"
                  data-garden-container-version="1.3.3"
                  data-garden-id="forms.text_label"
                  data-garden-version="7.1.10"
                  for="3val-field_1.3.3--input"
                  id="3val-field_1.3.3--label"
                >
                  <strong>
                    How can we help you?
                  </strong>
                </label>
                <textarea
                  aria-describedby="3val-field_1.3.3--hint"
                  aria-invalid="false"
                  aria-labelledby="3val-field_1.3.3--label"
                  class="-textarea text__c-txt__input___38pRd text__c-txt__input--area___9Qxj1 "
                  data-garden-id="forms.textarea"
                  data-garden-version="7.1.10"
                  data-testid="message-field"
                  id="3val-field_1.3.3--input"
                  name="description"
                  required=""
                  rows="5"
                />
              </div>
              <span />
            </div>
          </div>
          <footer
            class="c8"
          >
            <div
              class="c9"
            >
              <a
                class="c10"
                data-testid="Icon--zendesk"
                href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
                tabindex="-1"
                target="_blank"
              >
                <svg
                  realfilename="widget-icon_zendesk.svg"
                  title="zendesk"
                />
              </a>
              <button
                class="button index__c-btn___3y2Qe index__c-btn--primary___1YOfW "
                data-garden-container-id="containers.keyboardfocus"
                data-garden-container-version="0.4.4"
                data-garden-id="buttons.button"
                data-garden-version="7.1.10"
                data-testid="button-ok"
                tabindex="0"
                type="submit"
              >
                Send
              </button>
            </div>
          </footer>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`renders the expected components in mobile mode 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -60,6 +60,6 @@
                    data-garden-id="forms.text_label"
                    data-garden-version="7.1.10"
-                   for="7val-field_1.3.3--input"
-                   id="7val-field_1.3.3--label"
+                   for="4val-field_1.3.3--input"
+                   id="4val-field_1.3.3--label"
                  >
                    <strong>
@@ -69,12 +69,12 @@
                  </label>
                  <input
-                   aria-describedby="7val-field_1.3.3--hint"
+                   aria-describedby="4val-field_1.3.3--hint"
                    aria-invalid="false"
-                   aria-labelledby="7val-field_1.3.3--label"
+                   aria-labelledby="4val-field_1.3.3--label"
                    class="StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd icTNBi"
                    data-garden-id="forms.input"
                    data-garden-version="7.1.10"
                    data-testid="name-field"
-                   id="7val-field_1.3.3--input"
+                   id="4val-field_1.3.3--input"
                    name="name"
                    value=""
@@ -90,6 +90,6 @@
                    data-garden-id="forms.text_label"
                    data-garden-version="7.1.10"
-                   for="8val-field_1.3.3--input"
-                   id="8val-field_1.3.3--label"
+                   for="5val-field_1.3.3--input"
+                   id="5val-field_1.3.3--label"
                  >
                    <strong>
@@ -98,12 +98,12 @@
                  </label>
                  <input
-                   aria-describedby="8val-field_1.3.3--hint"
+                   aria-describedby="5val-field_1.3.3--hint"
                    aria-invalid="false"
-                   aria-labelledby="8val-field_1.3.3--label"
+                   aria-labelledby="5val-field_1.3.3--label"
                    class="StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd icTNBi"
                    data-garden-id="forms.input"
                    data-garden-version="7.1.10"
                    data-testid="email-field"
-                   id="8val-field_1.3.3--input"
+                   id="5val-field_1.3.3--input"
                    name="email"
                    pattern="[a-zA-Z0-9!#$%&'*+/=?^_\`{|}~\\\\-\`']+(?:\\\\.[a-zA-Z0-9!#$%&'*+/=?^_\`{|}~\\\\-\`']+)*@(?:[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?\\\\.)+[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?"
@@ -121,6 +121,6 @@
                    data-garden-id="forms.text_label"
                    data-garden-version="7.1.10"
-                   for="9val-field_1.3.3--input"
-                   id="9val-field_1.3.3--label"
+                   for="6val-field_1.3.3--input"
+                   id="6val-field_1.3.3--label"
                  >
                    <strong>
@@ -129,12 +129,12 @@
                  </label>
                  <textarea
-                   aria-describedby="9val-field_1.3.3--hint"
+                   aria-describedby="6val-field_1.3.3--hint"
                    aria-invalid="false"
-                   aria-labelledby="9val-field_1.3.3--label"
+                   aria-labelledby="6val-field_1.3.3--label"
                    class="StyledTextInput-sc-1ezxcjx-0-textarea StyledTextarea-p4bofl-0 text__c-txt__input___38pRd text__c-txt__input--area___9Qxj1 ffjHNh"
                    data-garden-id="forms.textarea"
                    data-garden-version="7.1.10"
                    data-testid="message-field"
-                   id="9val-field_1.3.3--input"
+                   id="6val-field_1.3.3--input"
                    name="description"
                    required=""
`;

exports[`renders the loading bar content 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  color: #2f3941;
  height: 100%;
  width: 100%;
  max-width: 100vw;
  position: relative;
  overflow: hidden;
  background-color: #fff;
  box-shadow: 0 0 0.42857142857142855rem 0 rgba(0,0,0,0.2);
  border-radius: 0.5714285714285714rem;
}

.c1 {
  padding: 0.5714285714285714rem 1rem;
  background: #1F73B7 !important;
  color: #FFFFFF !important;
}

.c4 {
  font-weight: 700;
  text-align: center;
  -webkit-letter-spacing: 0.02142857142857143rem;
  -moz-letter-spacing: 0.02142857142857143rem;
  -ms-letter-spacing: 0.02142857142857143rem;
  letter-spacing: 0.02142857142857143rem;
  line-height: 1.5;
  font-size: 1.0714285714285714rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-bottom: 2px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 2rem;
}

.c2:not(:first-child) {
  margin-top: 0.2857142857142857rem;
}

.c2 .c3:first-child {
  margin-left: 4rem;
}

.c2 .c3:nth-child(2) {
  margin-left: 2rem;
}

.c2 .c3:last-child {
  margin-right: 4rem;
}

.c2 .c3:nth-last-child(2) {
  margin-right: 2rem;
}

.c2 .c5 {
  width: 2rem !important;
  height: 2rem !important;
}

.c6 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c6 svg {
  width: 1rem !important;
  height: 1rem !important;
}

.c6 svg,
.c6 path {
  fill: #FFFFFF !important;
  color: #FFFFFF !important;
}

.c6:focus {
  outline: none !important;
  box-shadow: 0 0 0 0.21428571428571427rem rgba(255,255,255,0.4) !important;
}

.c6:hover {
  background: #227EC9 !important;
}

.c7 {
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
  padding-top: 1.0714285714285714rem;
  padding-left: 0.7142857142857143rem;
  padding-right: 1.0714285714285714rem;
  margin-left: 0.7142857142857143rem;
  margin-right: 0.35714285714285715rem;
  overflow-y: auto;
  overflow-x: hidden;
  height: 100%;
}

.c7::-webkit-scrollbar-track {
  margin: 1.0714285714285714 0;
}

.c7::-webkit-scrollbar {
  box-shadow: none;
  width: 0.42857142857142855rem;
}

.c7::-webkit-scrollbar-thumb {
  background: #d8dcde;
  border-radius: 0.21428571428571427rem;
}

.c8 {
  padding: 1.0714285714285714rem 1.4285714285714286rem;
  border-top: 0.07857142857142858rem solid #e9ebed;
  box-shadow: 0 -0.07142857142857142rem 0.8571428571428571rem rgba(0,0,0,0.08);
}

.c10 {
  position: relative;
  display: inline-block;
}

.c10 svg {
  min-width: 3.5714285714285716rem;
  width: 3.5714285714285716rem;
  height: 0.7142857142857143rem;
}

.c10 svg:hover path,
.c10 svg:active path,
.c10 svg:focus path {
  fill: #68737d;
}

.c10 svg path {
  fill: #87929d;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

<div
  style="display: block;"
>
  <div>
    <form
      class="form "
      novalidate=""
    >
      <div
        class="c0"
      >
        <div
          class="c1"
          data-testid="widget-header-view"
        >
          <div
            class="c2"
          >
            <h1
              class="c3 c4"
              data-testid="widget-title"
            >
              message
            </h1>
            <button
              aria-label="Minimize widget"
              class="c5 index__c-btn--icon___1Yl4x c6 index__c-btn___3y2Qe index__c-btn--basic___38OO7 index__c-btn--muted___ze6U0 index__c-btn--sm___3Kuhv "
              data-garden-container-id="containers.keyboardfocus"
              data-garden-container-version="0.4.4"
              data-garden-id="buttons.icon_button"
              data-garden-version="7.1.10"
              tabindex="0"
              type="button"
            >
              <svg
                class="index__c-btn__icon___3V0Rl"
                data-garden-id="buttons.icon"
                data-garden-version="7.1.10"
                data-testid="Icon--dash"
                realfilename="dash-fill.svg"
              />
            </button>
          </div>
        </div>
        <div
          class="c7"
          data-testid="scroll-container-content"
        >
          <div
            class="formWrapper"
          >
            <div
              class="text__c-txt___Uzv-G range__c-range___1aYaS "
            >
              <label
                class="text__c-txt__label___3wMPZ "
                data-garden-container-id="containers.field"
                data-garden-container-version="1.3.3"
                data-garden-id="forms.text_label"
                data-garden-version="7.1.10"
                for="28val-field_1.3.3--input"
                id="28val-field_1.3.3--label"
              >
                <strong>
                  Your name
                </strong>
                 (optional)
              </label>
              <input
                aria-describedby="28val-field_1.3.3--hint"
                aria-invalid="false"
                aria-labelledby="28val-field_1.3.3--label"
                class="text__c-txt__input___38pRd "
                data-garden-id="forms.input"
                data-garden-version="7.1.10"
                data-testid="name-field"
                id="28val-field_1.3.3--input"
                name="name"
                value=""
              />
            </div>
            <div
              class="text__c-txt___Uzv-G range__c-range___1aYaS "
            >
              <label
                class="text__c-txt__label___3wMPZ "
                data-garden-container-id="containers.field"
                data-garden-container-version="1.3.3"
                data-garden-id="forms.text_label"
                data-garden-version="7.1.10"
                for="29val-field_1.3.3--input"
                id="29val-field_1.3.3--label"
              >
                <strong>
                  Email address
                </strong>
              </label>
              <input
                aria-describedby="29val-field_1.3.3--hint"
                aria-invalid="false"
                aria-labelledby="29val-field_1.3.3--label"
                class="text__c-txt__input___38pRd "
                data-garden-id="forms.input"
                data-garden-version="7.1.10"
                data-testid="email-field"
                id="29val-field_1.3.3--input"
                name="email"
                pattern="[a-zA-Z0-9!#$%&'*+/=?^_\`{|}~\\\\-\`']+(?:\\\\.[a-zA-Z0-9!#$%&'*+/=?^_\`{|}~\\\\-\`']+)*@(?:[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?\\\\.)+[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?"
                required=""
                value=""
              />
            </div>
            <div
              class="text__c-txt___Uzv-G range__c-range___1aYaS "
            >
              <label
                class="text__c-txt__label___3wMPZ "
                data-garden-container-id="containers.field"
                data-garden-container-version="1.3.3"
                data-garden-id="forms.text_label"
                data-garden-version="7.1.10"
                for="30val-field_1.3.3--input"
                id="30val-field_1.3.3--label"
              >
                <strong>
                  How can we help you?
                </strong>
              </label>
              <textarea
                aria-describedby="30val-field_1.3.3--hint"
                aria-invalid="false"
                aria-labelledby="30val-field_1.3.3--label"
                class="-textarea text__c-txt__input___38pRd text__c-txt__input--area___9Qxj1 "
                data-garden-id="forms.textarea"
                data-garden-version="7.1.10"
                data-testid="message-field"
                id="30val-field_1.3.3--input"
                name="description"
                required=""
                rows="5"
              />
            </div>
            <span />
          </div>
        </div>
        <footer
          class="c8"
        >
          <div
            class="c9"
          >
            <a
              class="c10"
              data-testid="Icon--zendesk"
              href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
              tabindex="-1"
              target="_blank"
            >
              <svg
                realfilename="widget-icon_zendesk.svg"
                title="zendesk"
              />
            </a>
            <button
              class="button index__c-btn___3y2Qe index__c-btn--primary___1YOfW "
              data-garden-container-id="containers.keyboardfocus"
              data-garden-container-version="0.4.4"
              data-garden-id="buttons.button"
              data-garden-version="7.1.10"
              data-testid="button-ok"
              tabindex="0"
              type="submit"
            >
              Send
            </button>
          </div>
        </footer>
      </div>
    </form>
  </div>
</div>
`;
